# Dionysus.YaksaPlugin.Develop

./: CMakeLists.txt  README.md  build.debug.sh  readme.txt
Agent.Horaisan/: CMakeLists.txt  README.md
Agent.Horaisan/CMakeModules/: PosixSetupComplileEnvironment.cmake
Agent.Horaisan/configuration/: plugins.json
Agent.Horaisan/src/: main.cpp
Agent.Horaisan/src/agent/: agent.cxx  agent.h  agent.print.h  waitable_event.cc  waitable_event.h
Library.Component/lib_yaksa_plugin/plugin_export/YaksaPlugin/: Plugin.Client.h  Plugin.Unnecessary.h  Pulgin.Export.h
Library.Component/others/: readme.txt
Plugin.Example/: CMakeLists.txt
Plugin.Example/plugin.export/: export.cpp  export.h
Plugin.Example/src/: Example.Plugin.Client.cpp  Example.Plugin.Client.h
Plugin.gRPC/: CMakeLists.txt
Plugin.gRPC/plugin.export/: export.cpp  export.h
Plugin.gRPC/proto3/: rpc_message.proto
Plugin.gRPC/proto3/python_server/: async_rpc_server.py
Plugin.gRPC/rpc_src/: rpc_message.grpc.pb.cc  rpc_message.grpc.pb.h  rpc_message.pb.cc  rpc_message.pb.h
Plugin.gRPC/src/: RPC.Plugin.Client.cpp  RPC.Plugin.Client.h  gRPC.Message.Client.cpp  gRPC.Message.Client.h
Python.Servers/python_server/: readme.txt  rpc_message_pb2.py  rpc_message_pb2.pyi  rpc_message_pb2_grpc.py
